--- a/infra/k8s/query-depl.yaml
+++ b/infra/k8s/query-depl.yaml
@@ -1,31 +1,31 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: posts-depl
+  name: query-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: posts
+      app: query
   template:
     metadata:
       labels:
-        app: posts
+        app: query
     spec:
       containers:
-        - name: posts
-          image: juniorotero/junior-posts
+        - name: query
+          image: juniorotero/query
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: posts-clisterip-srv
+  name: query-srv
 spec:
   type: ClusterIP
   selector:
-    app: posts
+    app: query
   ports:
-    - name: posts
+    - name: query
       protocol: TCP
-      port: 4000
-      targetPort: 4000
+      port: 4003
+      targetPort: 4003
